--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable='no', initial-scale=1.0">
+    <!-- ios support -->
+<link rel="apple-touch-icon" href="assets/icon.jpg" />
+<link rel="apple-touch-icon" href="assets/icon.jpg" />
+<link rel="apple-touch-icon" href="imassets/icon.jpg" />
+<link rel="apple-touch-icon" href="imassets/icon.jpg" />
+<link rel="apple-touch-icon" href="imassets/icon.jpg" />
+<link rel="apple-touch-icon" href="imassets/icon.jpg" />
+<link rel="apple-touch-icon" href="imassets/icon.jpg" />
+<link rel="apple-touch-icon" href="imassets/icon.jpg" />
+<meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+<meta name="theme-color" content="#db4938" />
     <link rel= "manifest" href= "manifest.json" />
     <title>Flybanking App</title>
     <!-- bootstrap css -->
