--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="apple-touch-icon" href="imassets/icon.jpg" />
 <link rel="apple-touch-icon" href="imassets/icon.jpg" />
 <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
-<meta name="theme-color" content="#db4938" />
+<meta name="theme-color" content="#4732be" />
     <link rel= "manifest" href= "manifest.json" />
     <title>Flybanking App</title>
     <!-- bootstrap css -->
