pwa install button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
 <body>
     <header>
+
+        <button class="add-button">Add to home screen</button>
+
         <!-- top header -->
         <nav class="navbar custom-bg-primary fixed-top">
             <div class="container">
