--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <hr>
-            <div class="walletMain d-flex justify-content-between align-items-center">
+            <div class="walletMain flex-wrap d-flex justify-content-between align-items-center">
                 <div class="withdrawMain">
                     <div class="d-flex justify-content-center align-items-center walletBox withdraw">
                         <i class="fa-solid fa-arrow-down"></i>
@@ -184,7 +184,7 @@
                                 </div>
                                 <div class="ms-4">
                                     <h4 class="profile-name mt-3 mb-1">Amazon</h4>
-                                    <p class="transation-purpose nt-0" style="color:var(--text-color-gray)">Shoping</p>
+                                    <p class="transation-purpose mt-0" style="color:var(--text-color-gray)">Shoping</p>
                                 </div>
                             </div>
                             <div class="mt-3">
@@ -447,56 +447,56 @@
                       <li class="splide__slide custom-sendMoney-slide">
                         <div class="profile-box">
                             <img class="d-block m-auto w-100 sendMoneyProfileImage" src="assets/avatar/womanInSmile.jpg" alt="woman In Smile">
-                            <p class="small profile-name text-center">Jenifer</p>
+                            <p class="small profile-name-sendmoney text-center">Jenifer</p>
                         </div>
 
                       </li>
                       <li class="splide__slide custom-sendMoney-slide">
                         <div class="profile-box">
                         <img class="d-block m-auto w-100 h-50 sendMoneyProfileImage" src="assets/avatar/avatar1.jpg" alt="man">
-                        <p class="small profile-name text-center">David</p>
+                        <p class="small profile-name-sendmoney text-center">David</p>
                     </div>
                 </li>
                 <li class="splide__slide custom-sendMoney-slide">
                         <div class="profile-box">
                             <img class="d-block m-auto w-100 sendMoneyProfileImage" src="assets/avatar/avatar2.jpg" alt="woman In Smile">
-                            <p class="small profile-name text-center">Charlotte</p>
+                            <p class="small profile-name-sendmoney text-center">Charlotte</p>
                         </div>
                 </li>
                 <li class="splide__slide custom-sendMoney-slide">
                     <div class="profile-box">
                         <img class="d-block m-auto w-100 sendMoneyProfileImage" src="assets/avatar/avatar3.jpg" alt="">
-                        <p class="small profile-name text-center">Justin</p>
+                        <p class="small profile-name-sendmoney text-center">Justin</p>
                     </div>
             </li>
             <li class="splide__slide custom-sendMoney-slide">
                 <div class="profile-box">
                     <img class="d-block m-auto w-100 sendMoneyProfileImage" src="assets/avatar/indian_woman.jpg" alt="">
-                    <p class="small profile-name text-center">Joyeeta</p>
+                    <p class="small profile-name-sendmoney text-center">Joyeeta</p>
                 </div>
         </li>
         <li class="splide__slide custom-sendMoney-slide">
             <div class="profile-box">
                 <img class="d-block m-auto w-100 sendMoneyProfileImage" src="assets/avatar/mantwo.jpg" alt="man">
-                <p class="small profile-name text-center">Stephen</p>
+                <p class="small profile-name-sendmoney text-center">Stephen</p>
             </div>
     </li>
     <li class="splide__slide custom-sendMoney-slide">
         <div class="profile-box">
             <img class="d-block m-auto w-100 sendMoneyProfileImage" src="assets/avatar/man.jpg" alt="">
-            <p class="small profile-name text-center">Edwen</p>
+            <p class="small profile-name-sendmoney text-center">Edwen</p>
         </div>
 </li>
 <li class="splide__slide custom-sendMoney-slide">
     <div class="profile-box">
         <img class="d-block m-auto w-100 sendMoneyProfileImage" src="assets/avatar/manAfrican.jpg" alt="">
-        <p class="small profile-name text-center">Lucas</p>
+        <p class="small profile-name-sendmoney text-center">Lucas</p>
     </div>
 </li>
 <li class="splide__slide custom-sendMoney-slide">
     <div class="profile-box">
         <img class="d-block m-auto w-100 sendMoneyProfileImage" src="assets/avatar/womanwithlaptop.jpg" alt="">
-        <p class="small profile-name text-center">Oliver</p>
+        <p class="small profile-name-sendmoney text-center">Oliver</p>
     </div>
 </li>
 
@@ -559,13 +559,55 @@
          <!----------------
          saving goals started
          ------------------->
-         <section id="monthlyBills" class="container">
+         <section id="savingsGoal" class="container">
             <div class="section-header d-flex justify-content-between align-items-center mt-5">
             
-                <h3 class="heading bigHeadings">Savings Goal</h3>
+                <h3 class="heading bigHeadings">Saving Goal</h3>
                 <a class=" link text-decoration-none" href="#">View All</a>
             </div>
+            <div class="goals">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <h3 class="goal-name">Smart TV</h3>
+                        <p class="goal-category">Technology</p>
+                    </div>
+                    <div>
+                        <h3 class="costOfTheGoal">$ 1,599</h3>
+                    </div>
+                </div>
+                <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                </div>
+            </div>
 
+            <div class="goals">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <h3 class="goal-name">New Land</h3>
+                        <p class="goal-category">Living</p>
+                    </div>
+                    <div>
+                        <h3 class="costOfTheGoal">$ 100,999</h3>
+                    </div>
+                </div>
+                <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+                </div>
+            </div>
+            <div class="goals">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <h3 class="goal-name">New Car</h3>
+                        <p class="goal-category">Lifestyle</p>
+                    </div>
+                    <div>
+                        <h3 class="costOfTheGoal">$ 42,999</h3>
+                    </div>
+                </div>
+                <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">35%</div>
+                </div>
+            </div>
         <!----------------
          saving goals end
          ------------------->
