--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
 <body>
     <header>
 
-      s
-
         <!-- top header -->
         <nav class="navbar custom-bg-primary fixed-top">
             <div class="container">
@@ -67,7 +65,7 @@
                 </div>
                 <!-- offcanvas ends -->
                 <a class="navbar-brand m-auto" href="#">
-                    <h5 class="logo mt-2" style="color: var(--text-color-white)">FlybankingApp</h5>
+                    <h3 class="logo mt-2" style="color: var(--text-color-white)"><i class="fa-solid fa-wallet me-1"></i>  Finwalletapp</h3>
                 </a>
 
                 <a href="" class="me-4 position-relative">
@@ -611,10 +609,13 @@
         <!----------------
          saving goals end
          ------------------->
-
-        
-
     </main>
+    <footer>
+        <div class="footer-main">
+            <p class="small footer-heading">&copy; Finwalletapp 2022. All rights reserved.</p>
+            <p class="sub-footer-paragraph">PWA based mobile template.</p>
+        </div>
+    </footer>
 </body>
 
 <!-- bootstrap js -->
