badge added to profile pic in top header

--- a/index.html
+++ b/index.html
@@ -68,13 +68,15 @@
                     <h3 class="logo mt-2" style="color: var(--text-color-white)"><i class="fa-solid fa-wallet me-1"></i>  Finwalletapp</h3>
                 </a>
 
-                <a href="" class="me-4 position-relative">
+                <a href="notifications.html" class="me-4 position-relative">
                     <i class="fa-regular fa-bell custom-notification "></i> <span class="position-absolute top-1 start-100 translate-middle badge rounded-circle bg-red custom-badge">9
                         <span class="visually-hidden">new</span>
                     </span>
                 </a>
-                <a href="" class="me-2">
-                    <img class="avatar" src="assets/avatar/avatar1.jpg" alt="">
+                <a href="profile.html" class="me-2 position-relative">
+                    <img class="avatar" src="assets/avatar/avatar1.jpg" alt=""> <span class="position-absolute top-1 start-100 translate-middle badge rounded-circle bg-red custom-badge">7
+                        <span class="visually-hidden">new</span>
+                    </span>
                 </a>
             </div>
         </nav>
