--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
         </div>
         </section>
         <section class="bottom-fixed-nav">
-            !-- bottom fixed navigation -->
+            <!-- bottom fixed navigation -->
             <div class="custom-bottom-nav mb-0 fixed-bottom">
            <div class="d-flex justify-content-start align-items-center">
                
